--- a/index.html
+++ b/index.html
@@ -16,7 +16,30 @@
   </head>
   <body>
   
-      
+    <div class="words word-1">
+        <span>D</span>
+        <span>O</span>
+        <span>Ğ</span>
+        <span>U</span>
+        <span>M </span>
+        <span> G</span>
+        <span>Ü</span>
+        <span>N</span>
+        <span>Ü</span>
+        <span>N </span>
+        <span> K</span>
+        <span>U</span>
+        <span>T</span>
+        <span>L</span>
+        <span>U </span>
+        <span> O</span>
+        <span>L</span>
+        <span>S</span>
+        <span>U</span>
+        <span>N</span>
+      </div>  
+
+
       <div class="words word-2">
         <span>E</span>
         <span>N</span>
