--- a/index.html
+++ b/index.html
@@ -7,70 +7,15 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Enfalime</title>
-      <meta content="Enfalime <3" property="og:title">
-	<meta content="Doğum Günün Kutlu Olsun!" property="og:description">
-	<meta name="theme-color" content="#fc037f">
-	<meta content='https://i.ibb.co/3hJ7YVM/v926-adj-038-2.jpg' property='og:image' itemprop="image">
-	<meta name="twitter:card" content="summary_large_image">
+      <title>not anymore</title>
+  
   </head>
   <body>
   
-    <div class="words word-1">
-        <span>D</span>
-        <span>O</span>
-        <span>Ğ</span>
-        <span>U</span>
-        <span>M </span>
-        <span> G</span>
-        <span>Ü</span>
-        <span>N</span>
-        <span>Ü</span>
-        <span>N </span>
-        <span> K</span>
-        <span>U</span>
-        <span>T</span>
-        <span>L</span>
-        <span>U </span>
-        <span> O</span>
-        <span>L</span>
-        <span>S</span>
-        <span>U</span>
-        <span>N</span>
-      </div>  
-
-
-      <div class="words word-2">
-        <span>E</span>
-        <span>N</span>
-        <span>F</span>
-        <span>A</span>
-        <span>L</span>
-      </div>
+	  <p>Beni sevmeyen biri için bu siteyi ayakta tutmama gerek yok.</p>
+ 
       
-      <div class="words word-3">
-        <span>S</span>
-        <span>E</span>
-        <span>N</span>
-        <span>I </span>
-        <span> S</span>
-        <span>E</span>
-        <span>V</span>
-        <span>I</span>
-        <span>Y</span>
-        <span>O</span>
-        <span>R</span>
-        <span>U</span>
-        <span>M</span>
-        <span>❤</span>
-
-
-      </div>
-      <script src="./confetti.js"></script>
-      <script>
-         setTimeout(() => {
-             confetti.start()
-         }, 1000);
-      </script>
+  
+     
   </body>
   </html>
